<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/age"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/et_brief_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:lines="2"
            android:hint="@string/brief_intro"
            android:textColor="@android:color/darker_gray" />

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sex_mail" />

            <RadioButton
                android:id="@+id/rd_femail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:text="@string/sex_femail" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/et_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/emial"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/reg_msg_prompt"
            android:textColor="@android:color/holo_red_light"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_marginTop="7dp"
            android:text="@string/register"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>